<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhatsApi</string>
    <string name="action_info">Info</string>
    <string name="enter_number">Enter your phone number</string>
    <string name="verify_btn">Verify</string>
    <string name="enter_username">Enter your user name</string>
    <string name="enter_verification_code">Enter the 6-digit code received by sms</string>
    <string name="login">Login</string>
    <string name="action_search">Search</string>
    <string name="changelog">Changelog</string>
    <string name="label_multiple_numbers">Multiple numbers</string>
    <string name="welcome_title">Welcome to WhatsApi</string>
    <string name="welcome_subtitle">An Android client for WhatsApp Messenger</string>
    <string name="enter_message">Type a message</string>
    <string name="username">Username</string>
    <string name="nothing_here">Nothing to see here!</string>
    <string name="info_title">WhatsApi Messenger</string>
    <string name="info_version">Version 1.0 (Initial release)</string>
    <string name="info_development">Developed and designed by next prisoners Giovanni Terlingen and Alessio Cotardo</string>
</resources>
